--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,15 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+/fixture/__init__.py
+/model/__init__.py
+/test/__init__.py
+/test/.pytest_cache
+/test/geckodriver.log
+/venv/
+check_db_connection.py
+/.idea
+
+
+
